--- a/src/assets/translations/ru.json
+++ b/src/assets/translations/ru.json
@@ -146,5 +146,6 @@
   "PinSet": "PIN-код успешно установлен",
   "CannotDeleteFile": "Невозможно удалить файл",
   "ImageNotFound": "Файл изображения не найден",
-  "MaxLoginAttempts": "Попробуйте ввести пароль"
+  "MaxLoginAttempts": "Попробуйте ввести пароль",
+  "NotEnoughSpace": "Недостаточно места на диске для хранения файла"
 }
