fix: camera roll permissions in image picker update: header images

--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -117,7 +117,8 @@
   "pickImage": "Pick Image",
   "change": "Change",
   "clear": "Clear",
-  "cameroRollPermissions": "Sorry, we need camera permissions to make this work!",
+  "cameraRollPermissionsiOS": "Sorry, we need photo gallery permissions to make this work!",
+  "cameraRollPermissionsAndroid": "Sorry, we need files and media permissions to make this work!",
   "General": "An error has occurred",
   "InvalidData": "Invalid data",
   "EmptyData": "Looks like no records have been found",
