--- a/src/assets/translations/fr.json
+++ b/src/assets/translations/fr.json
@@ -117,7 +117,8 @@
   "pickImage": "Choisissez l'image",
   "change": "Changement",
   "clear": "Clair",
-  "cameroRollPermissions": "Désolé, nous avons besoin d'autorisations de caméra pour faire ce travail!",
+  "cameraRollPermissionsiOS": "Désolé, nous avons besoin d'une autorisation à la galerie photos pour faire ce travail!",
+  "cameraRollPermissionsAndroid": "Désolé, nous avons besoin d'une autorisation aux fichiers et médias pour faire ce travail!",
   "General": "Une erreur est survenue",
   "InvalidData": "Données invalides",
   "EmptyData": "On dirait pas de documents ont été trouvés",
