--- a/src/assets/translations/ru.json
+++ b/src/assets/translations/ru.json
@@ -117,7 +117,8 @@
   "pickImage": "Выберите Изображение",
   "change": "Поменять",
   "clear": "Убрать",
-  "cameroRollPermissions": "Извините, нам нужен доступ к фотогалерее для добавления фотографий",
+  "cameraRollPermissionsiOS": "Извините, нам нужно разрешение к фотогалерее для добавления фотографий",
+  "cameraRollPermissionsAndroid": "Извините, нам нужны разрешения для файлов и медиаконтента для добавления фотографий",
   "General": "Произошла ошибка",
   "InvalidData": "Неверные данные",
   "EmptyData": "Похоже, записи не найдены",
