--- a/src/assets/translations/ru.json
+++ b/src/assets/translations/ru.json
@@ -95,6 +95,7 @@
   "fileInvalidItemName": "Обнаружено неверное имя типа",
   "fileInvalidCopy": "Неверный файл для копирования",
   "filePleaseWait": "Проверка файла, подождите пожалуйста",
+  "fileGenerating": "Готовим файл, подождите пожалуйста",
   "importExport": "Импорт и Экспорт",
   "export": "Экспорт",
   "exportExplanation": "Экспорт данных в файл для использования в качестве резервной копии или для перемещения данных на другое устройство",
