style: removed some line breaks from text

--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -60,10 +60,10 @@
   "pinUseDigits": "Please use at least 4 or 6 digits",
   "pinMatch": "PIN and re-entered PIN numbers must match",
   "pinHasSet": "Your PIN has been set",
-  "pinTip": "Tip: use six or more digits\r\nfor stronger security",
+  "pinTip": "Tip: use six or more digits for stronger security",
   "pinInvalid": "Invalid PIN",
   "secureData": "Secure data",
-  "secureDataWith": "Secure your data\r\nwith a password or\r\npassphrase",
+  "secureDataWith": "Secure your data with a password or passphrase",
   "welcome": "Welcome",
   "welcomeFriend": "Welcome friend!",
   "welcomeFriend2": "Welcome\r\nfriend!",
