--- a/src/assets/translations/ru.json
+++ b/src/assets/translations/ru.json
@@ -63,7 +63,7 @@
   "pinTip": "Совет: используйте шесть или более цифр для более надежной защиты",
   "pinInvalid": "Неверный PIN-код",
   "secureData": "Защита данных",
-  "secureDataWith": "Защитите свои данные\r\nпаролем или парольной фразой",
+  "secureDataWith": "Защитите свои данные паролем или парольной фразой",
   "welcome": "Добро пожаловать",
   "welcomeFriend": "Добро пожаловать, друг!",
   "welcomeFriend2": "Добро пожаловать!",
