style: password field during setup fix: missing images directory during initial import

--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -125,7 +125,8 @@
   "InvalidData": "Invalid data",
   "EmptyData": "Looks like no records have been found",
   "InvalidFormat": "Invalid format",
-  "InvalidFile": "Invalid file",
+  "InvalidFile": "Invalid file. If this is a cloud document, please download it to the device first.",
+  "InvalidDirectory": "Directory does not exist",
   "InvalidFileData": "Invalid data, please try another file",
   "NoRecordsInFile": "Looks like there are no records in file",
   "InvalidParameter": "Invalid parameter",
