--- a/src/assets/translations/ru.json
+++ b/src/assets/translations/ru.json
@@ -125,7 +125,8 @@
   "InvalidData": "Неверные данные",
   "EmptyData": "Похоже, записи не найдены",
   "InvalidFormat": "Неверный формат",
-  "InvalidFile": "Неверный файл",
+  "InvalidFile": "Неверный файл. Если это облачный документ, сначала загрузите его на устройство.",
+  "InvalidDirectory": "Папка не существует",
   "InvalidFileData": "Неверные данные, попробуйте другой файл",
   "NoRecordsInFile": "Похоже, в файле нет записей",
   "InvalidParameter": "Неверный параметр",
