feature: hide note text on home screen by default

--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -115,7 +115,11 @@
   "theme": "Theme",
   "dark": "Dark",
   "light": "Light",
-  "version": "App Version",
+  "hideNoteText": "Hide note content",
+  "hideNoteTextSubtitle": "Note content will not be revealed by default on home screen",
+  "hideText": "hide text",
+  "showText": "show text",
+  "version": "App version",
   "pickImage": "Pick Image",
   "change": "Change",
   "clear": "Clear",
