--- a/src/assets/translations/fr.json
+++ b/src/assets/translations/fr.json
@@ -8,7 +8,7 @@
   "images": "Images",
   "notes": "Notes",
   "moods": "Humeurs",
-  "sleeps": "Dormir",
+  "sleeps": "Sommeil",
   "happy": "Heureux",
   "soso": "Pas terrible",
   "couldBeBetter": "Ça pourrait être mieux",
@@ -32,9 +32,9 @@
   "selectItemFirst": "Sélectionnez d'abord un élément",
   "itemDeleted": "Élément supprimé",
   "updatedSuccessfully": "Mis à jour avec succés",
-  "emptyList": "Oops ... liste vide",
+  "emptyList": "Liste vide...",
   "password": "Mot de passe",
-  "passwordEnter": "Entrer le mot de passe",
+  "passwordEnter": "Entrez le mot de passe",
   "passwordEnterFile": "Entrez le mot de passe fichier",
   "passwordPleaseEnter": "S'il vous plaît entrer le mot de passe",
   "passwordPleaseReEnter": "S'il vous plaît entrez de nouveau le mot de passe",
@@ -90,7 +90,7 @@
   "importClear": "Effacer le fichier",
   "fileEmpty": "On dirait que le fichier est vide",
   "fileNoValidRecords": "Aucun enregistrement valide n'a été trouvé dans le fichier",
-  "fileInvalidData": "Des données non valides, s'il vous plaît essayer un autre fichier",
+  "fileInvalidData": "Les données sont pasvalides, s'il vous plaît essayer un autre fichier",
   "fileInvalidFormat": "Format invalide",
   "fileInvalidItemName": "Type inconnue",
   "fileInvalidCopy": "Fichier non valide pour copie",
@@ -98,10 +98,10 @@
   "fileGenerating": "Création du fichier en cours",
   "importExport": "Importer et exporter",
   "export": "Exporter",
-  "exportExplanation": "Exporter des données vers le fichier à utiliser comme une sauvegarde ou pour transférer des données vers un autre appareil",
-  "exportSubExplanation": "Vos données cryptées est prêt pour l'exportation",
-  "exportComplete": "Exportation de données terminée",
-  "exportNoData": "Quelque chose a mal tourné. Aucune donnée à exporter.",
+  "exportExplanation": "Exporter les données comme sauvegarde ou pour transférer vers un autre appareil",
+  "exportSubExplanation": "Prêt pour l'exportation",
+  "exportComplete": "Exportation terminée",
+  "exportNoData": "Quelque chose a mal tourné. Données non exporté.",
   "history": "Historique",
   "bedTime": "Heure du coucher:",
   "wakeTime": "Réveiller:",
@@ -115,6 +115,10 @@
   "theme": "Thème",
   "dark": "Foncé",
   "light": "Clair",
+  "hideNoteText": "Masquer le contenu de la note",
+  "hideNoteTextSubtitle": "Le contenu de la note ne sera pas révélée par défaut sur l'écran d'accueil",
+  "hideText": "Masquer le texte",
+  "showText": "Afficher le texte",
   "version": "Version de l'application",
   "pickImage": "Choisissez l'image",
   "change": "Changement",
@@ -126,7 +130,7 @@
   "EmptyData": "On dirait pas de documents ont été trouvés",
   "InvalidFormat": "Format invalide",
   "InvalidFile": "Fichier non valide",
-  "InvalidDirectory": "Directory does not exist",
+  "InvalidDirectory": "Le répertoire n'existe pas",
   "InvalidFileData": "Des données non valides, s'il vous plaît essayer un autre fichier",
   "NoRecordsInFile": "On dirait qu'il n'y a pas enregistrements dans le fichier",
   "InvalidParameter": "Paramètre invalide",
@@ -141,15 +145,15 @@
   "UnableToEncrypt": "Impossible de chiffrer",
   "UnableToDecrypt": "Impossible de décrypter",
   "ImportError": "Erreur d'importation",
-  "ExportError": "Erreur Export",
+  "ExportError": "Erreur d'exportation",
   "AccessStorage": "Impossible de stockage d'accès",
   "PasswordAlreadySet": "Mot de passe a déjà été défini, connecté vous",
   "CannotSetPIN": "Impossible configurer le nouveau code PIN",
-  "Unauthorized": "Non autorisée",
+  "Unauthorized": "Non autorisé",
   "PasswordSet": "Mot de passe appliqué avec succès",
   "PinSet": "PIN défini avec succès",
   "CannotDeleteFile": "Impossible de supprimer le fichier",
-  "ImageNotFound": "Ooops, fichier image not found",
+  "ImageNotFound": "Erreur, fichier image non trouvé",
   "MaxLoginAttempts": "Permet d'essayer d'entrer un mot de passe à la place",
   "NotEnoughSpace": "Espace disque insuffisant pour créer le fichier"
 }
