--- a/src/assets/translations/ru.json
+++ b/src/assets/translations/ru.json
@@ -115,7 +115,11 @@
   "theme": "Тема устройства",
   "dark": "Темная",
   "light": "Светлая",
-  "version": "Версия Приложения",
+  "hideNoteText": "Скрыть содержимое заметки",
+  "hideNoteTextSubtitle": "По умолчанию содержимое заметки скрыто на главной странице",
+  "hideText": "скрыть текст",
+  "showText": "показать текст",
+  "version": "Версия приложения",
   "pickImage": "Выберите Изображение",
   "change": "Поменять",
   "clear": "Убрать",
