--- a/src/assets/translations/ru.json
+++ b/src/assets/translations/ru.json
@@ -32,7 +32,7 @@
   "selectItemFirst": "Сначала выберите элемент",
   "itemDeleted": "Элемент удален",
   "updatedSuccessfully": "Успешно обновлено",
-  "emptyList": "Упс...похоже, у нас здесь нет ничего",
+  "emptyList": "Похоже, у нас здесь нет ничего",
   "password": "Пароль",
   "passwordEnter": "Введите пароль",
   "passwordEnterFile": "Введите пароль файла",
