--- a/src/assets/translations/ru.json
+++ b/src/assets/translations/ru.json
@@ -87,7 +87,7 @@
   "importPress": "Нажмите кнопку ниже, чтобы импортировать выбранный файл",
   "importSelectedFile": "Выбранный файл:",
   "importBrowse": "Поиск Файла",
-  "importClear": "Отменить выбор файла",
+  "importClear": "Вернуться",
   "fileEmpty": "Похоже, файл пуст",
   "fileNoValidRecords": "В файле не найдено действительных записей",
   "fileInvalidData": "Неверные данные, попробуйте другой файл",
