add: Meditation, Exercise, Creativity, Water Intake widgets

--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -5,6 +5,8 @@
   "mood": "Mood",
   "sleep": "Sleep",
   "image": "Image",
+  "water": "Water",
+  "waterIntake": "Water Intake",
   "images": "Images",
   "notes": "Notes",
   "moods": "Moods",
