--- a/src/assets/translations/fr.json
+++ b/src/assets/translations/fr.json
@@ -5,6 +5,8 @@
   "mood": "Humeur",
   "sleep": "Sommeil",
   "image": "Image",
+  "water": "Water",
+  "waterIntake": "Water Intake",
   "images": "Images",
   "notes": "Notes",
   "moods": "Humeurs",
