--- a/src/assets/translations/ru.json
+++ b/src/assets/translations/ru.json
@@ -5,6 +5,8 @@
   "mood": "Настроение",
   "sleep": "Сон",
   "image": "Фото",
+  "water": "Water",
+  "waterIntake": "Water Intake",
   "images": "Фото",
   "notes": "Записи",
   "moods": "Настроения",
