update: improved widgets toolbar, settings cleanup fix: empty widget item should not be saved

--- a/src/assets/translations/de.json
+++ b/src/assets/translations/de.json
@@ -1,161 +1,173 @@
 {
   "appName": "Be Well",
-  "languageLabel": "Deutsche",
-  "note": "Hinweis",
+  "languageLabel": "Deutsch",
+  "note": "Notizen",
   "mood": "Stimmung",
   "sleep": "Schlaf",
   "image": "Bild",
   "water": "Water",
   "waterIntake": "Water Intake",
+  "movement": "Movement",
+  "move": "Move",
+  "creativity": "Creativity",
+  "create": "Create",
+  "meditationMinutes": "Meditation (minutes)",
+  "meditation": "Meditation",
+  "meditate": "Meditate",
+  "period": "Period",
   "images": "Bilder",
-  "notes": "Anmerkungen",
-  "moods": "Moods",
+  "notes": "Notizen",
+  "moods": "Stimmungen",
   "sleeps": "Schlaf",
-  "happy": "glücklich",
-  "soso": "Soso",
+  "happy": "Glücklich",
+  "soso": "Geht so",
   "couldBeBetter": "Könnte besser sein",
-  "restful": "erholsam",
-  "interrupted": "unterbrochen",
-  "poor": "Arm",
-  "ok": "OK",
-  "cancel": "Stornieren",
-  "done": "Getan",
-  "save": "speichern",
-  "dateAndTime": "Datum (und Uhrzeit",
-  "pickTime": "Pick Zeit",
+  "restful": "Erholsam",
+  "interrupted": "Unterbrochen",
+  "poor": "Schlecht",
+  "ok": "Ok",
+  "cancel": "Abrechen ",
+  "done": "Erledigt",
+  "save": "Speichern",
+  "dateAndTime": "Datum und Uhrzeit",
+  "pickTime": "Zeit (auswählen)",
   "loading": "Wird geladen...",
   "today": "Heute",
   "yesterday": "Gestern",
-  "at": " beim",
-  "more": "Mehr",
-  "less": "Weniger",
-  "areYouSureDeleteThisItem": "Sind Sie sicher, dass Sie diesen Inhalt löschen?",
-  "deleteThisItem": "Löschen Sie diesen Artikel?",
-  "selectItemFirst": "Wählen Sie ein Element zuerst",
-  "itemDeleted": "Artikel gelöscht",
-  "updatedSuccessfully": "Erfolgreich geupdated",
-  "emptyList": "Sieht aus wie keine Aufzeichnungen hier",
+  "at": "bei / beim ",
+  "more": "mehr",
+  "less": "weniger",
+  "areYouSureDeleteThisItem": "Möchtest du dieses Element löschen? ",
+  "deleteThisItem": "Dieses Element löschen?",
+  "selectItemFirst": "Zuerst Element auswählen ",
+  "itemDeleted": "Element gelöscht",
+  "updatedSuccessfully": "Update erfolgreich",
+  "emptyList": "Sieht so aus, als gibt es hier noch keine Aufzeichnungen.",
   "password": "Passwort",
   "passwordEnter": "Passwort eingeben",
-  "passwordEnterFile": "Geben Sie Datei-Passwort",
-  "passwordPleaseEnter": "Bitte geben Sie das Passwort",
-  "passwordPleaseReEnter": "Bitte geben Sie ein Passwort",
+  "passwordEnterFile": "Gib dein Dateikennwort ein",
+  "passwordPleaseEnter": "Passwort eingeben",
+  "passwordPleaseReEnter": "Bitte gib dein Passwort erneut ein",
   "passwordChange": "Passwort ändern",
-  "passwordChoose": "Zum besseren Schutz, sollten Sie ein Passwort mit mehreren zufälligen Wörtern wählen",
-  "passwordMinimum": "Bitte benutzen Sie den mindestens 8 Zeichen und können mehrere Wörter mit Leerzeichen sein",
+  "passwordChoose": "Zum besseren Schutz, sollte das Passwort aus mehreren zufälligen Buchstaben und Zahlen bestehen.",
+  "passwordMinimum": "Mindestens 8 Zeichen (Können auch mehrere Wörter mit Leerzeichen sein)",
   "passwordConfirm": "Bitte bestätigen Sie Ihr Passwort",
-  "passwordFile": "Oops .... kann die Datei nicht importieren. Vielleicht war es mit einem anderen Passwort erstellt? Wenn ja, dann geben Sie es bitte unten oder eine andere Datei versuchen.",
-  "passwordChanged": "Ihr Passwort wurde geändert",
-  "passwordConfirmPlaceholder": "Bestätigen Sie das aktuelle Kennwort",
+  "passwordFile": "Oops .... die Datei kann nicht importiert werden. Vielleicht wurde sie mit einem anderen Passwort erstellt? Wenn ja, gib das korrekte Passwort unten ein oder lade eine andere Datei hoch.",
+  "passwordChanged": "Passwort wurde geändert",
+  "passwordConfirmPlaceholder": "Bestätige das aktuelle Kennwort",
   "passwordEnterNewPlaceholder": "Neues Passwort eingeben",
-  "passwordReEnterPlaceholder": "neues Passwort erneut eingeben",
-  "passwordsMatch": "Passwort und neu eingegebene Passwort müssen übereinstimmen",
-  "passwordFieldsRequired": "Alle Felder sind erforderlich. Neues Passwort mindestens acht Zeichen lang sein lang",
+  "passwordReEnterPlaceholder": "Neues Passwort erneut eingeben",
+  "passwordsMatch": "Dein Passwort und das neu eingegebene Passwort müssen übereinstimmen",
+  "passwordFieldsRequired": "Alle Felder müssen ausgefüllt werden. Das neue Passwort muss mindestens acht Zeichen lang sein.",
   "passwordInvalid": "Ungültiges Passwort",
-  "pinConfirm": "Bitte bestätigen Sie Ihre PIN-Nummer",
-  "pinEnter": "Pin eingeben",
-  "pinReEnterPlaceholder": "Re-PIN eingeben",
-  "pinLock": "Pin Sperre",
-  "pinLockYourApp": "Sperren Sie Ihre App mit einer PIN",
-  "pinInstructions": "Geben Sie mindestens eine 4-stellige PIN-Nummer unter",
-  "pinReEnter": "Geben Sie erneut Ihre neue PIN-Nummer",
-  "pinUseDigits": "Bitte verwenden Sie mindestens 4 oder 6 Stellen",
-  "pinMatch": "PIN und neu eingegebene PIN-Nummern müssen übereinstimmen",
-  "pinHasSet": "Ihre PIN gesetzt wurde",
-  "pinTip": "Tipp: Verwenden Sie sechs oder mehr Stellen für eine höhere Sicherheit",
+  "pinConfirm": "Bitte bestätige deine PIN-Nummer",
+  "pinEnter": "PIN eingeben",
+  "pinReEnterPlaceholder": "PIN nochmal eingeben",
+  "pinLock": "PIN Sperre",
+  "pinLockYourApp": "Sperre deine App mit einem PIN.",
+  "pinInstructions": "Gib mindestens eine 4-stellige PIN-Nummer ein.",
+  "pinReEnter": "Gib nochmal deine PIN-Nummer ein",
+  "pinUseDigits": "Verwende mindestens 4 oder 6 Zahlen",
+  "pinMatch": "PIN und neu eingegebene PIN-Nummer müssen übereinstimmen",
+  "pinHasSet": "Deine PIN Nummer wurde erstellt",
+  "pinTip": "Tipp: Verwende sechs oder mehr Zahlen für einen noch besseren Schutz",
   "pinInvalid": "ungültige PIN",
   "secureData": "Daten sichern",
-  "secureDataWith": "Sichern Sie Ihre Daten mit einem Passwort oder Passwort",
-  "welcome": "Herzlich willkommen",
-  "welcomeFriend": "Willkommen Freund!",
-  "welcomeFriend2": "Herzlich willkommen Freund!",
-  "welcomeBack": "Willkommen zurück, Freund",
+  "secureDataWith": "Sicher deine Daten mit einem Passwort (Hier kann auch ein ganzer Satz helfen)",
+  "welcome": "Herzlich Willkommen",
+  "welcomeFriend": "Willkommen!",
+  "welcomeFriend2": "Herzlich Willkommen!",
+  "welcomeBack": "Willkommen zurück,",
   "howAreYou": "Wie geht es dir?",
-  "tapAddButtons": "Tippen Sie auf die Tasten oben, um Ihr Wohlbefinden hinzufügen",
-  "track": "Verfolgen Sie Ihr Wohlbefinden, während die Daten zu halten privaten",
-  "quickSetup": "Quick Setup",
+  "tapAddButtons": "Wähle aus der Leiste oben, um dein Wohlbefinden hinzuzufügen.",
+  "track": "Verfolge dein Wohlbefinden, während deine Daten sicher sind. ",
+  "quickSetup": "Schnelle Einrichtung",
   "skip": "Überspringen",
-  "doneGoHome": "Abgeschlossen, gehen Sie auf Home-Bildschirm",
+  "doneGoHome": "Abgeschlossen, gehe zurück zur Startseite",
   "signIn": "Anmelden",
-  "signOut": "Austragen",
-  "signOutClick": "klicken Sie unten Um zu unterzeichnen",
-  "signOutWillClear": "Dies wird klar, Ihre Sitzung und erfordert, dass Sie sich wieder anmelden",
-  "goBackNo": "Nein, gehen Sie zurück",
+  "signOut": "Ausloggen",
+  "signOutClick": "Klicke unten, um dich auszuloggen",
+  "signOutWillClear": "Deine Sitzung wird beendet und du musst dich beim nächsten mal erneut anmelden",
+  "goBackNo": "Nein, ich möchte angemeldet bleiben und zurück",
   "import": "Importieren",
-  "importExplanation": "Importieren Sie Ihre App-Daten aus einer Datei",
-  "importExplanationLong": "Importieren von Daten aus der Datei, vielleicht nach auf ein anderes Gerät zu bewegen oder nach einem Reset",
-  "importBrowseExplanation": "Suchen Sie nach der Datei, wo Sie es während einer früheren Sicherung / Export-Operation gespeichert haben",
+  "importExplanation": "Importiere deine App-Daten aus einer Datei",
+  "importExplanationLong": "Importiere Daten aus einer Datei, vielleicht um sie auf ein anderes Gerät zu bewegen oder nach einem Neustart",
+  "importBrowseExplanation": "Such nach der Datei, wo sie während einer früheren Sicherung gespeichert wurde",
   "importComplete": "erfolgreich importiert",
-  "importPress": "Drücken Sie die Taste unten um die ausgewählte Datei zu importieren",
+  "importPress": "Bestätige unten um die ausgewählte Datei zu importieren",
   "importSelectedFile": "Ausgewählte Datei:",
-  "importBrowse": "Nach Datei",
-  "importClear": "Zurück zum Durchsuchen",
-  "fileEmpty": "Sieht aus wie die Datei leer ist",
-  "fileNoValidRecords": "Keine gültigen Datensätze wurden in der Datei",
-  "fileInvalidData": "Ungültige Daten, versuchen Sie eine andere Datei",
+  "importBrowse": "Nach Datei suchen",
+  "importClear": "Zurück zur Suche",
+  "fileEmpty": "Sieht aus, als wäre die Datei leer",
+  "fileNoValidRecords": "Es wurden keine gültigen Datensätze in der Datei gefunden.",
+  "fileInvalidData": "Ungültige Daten, versuch eine andere Datei",
   "fileInvalidFormat": "Ungültiges Format",
-  "fileInvalidItemName": "Ungültige Typ Namen gefunden",
-  "fileInvalidCopy": "Ungültige Datei zu kopieren",
-  "filePleaseWait": "Überprüfen Datei, bitte warten",
-  "fileGenerating": "Datei zu erzeugen, bitte warten",
+  "fileInvalidItemName": "Ungültige Typenname",
+  "fileInvalidCopy": "Datei kann nicht kopiert werden",
+  "filePleaseWait": "Überprüfe Datei, bitte warten",
+  "fileGenerating": "Datei wird erstellt, bitte warten",
   "importExport": "Import und Export",
   "export": "Export",
-  "exportExplanation": "Exportieren von Daten in Datei als Backup verwendet werden oder für die Daten auf ein anderes Gerät zu bewegen",
-  "exportSubExplanation": "Ihre verschlüsselten Daten sind bereit für den Export",
+  "exportExplanation": "Exportiere Daten in eine Datei, um sie als Backup oder zum Verschieben von Daten auf einem anderen Gerät zu verwenden",
+  "exportSubExplanation": "Deine verschlüsselten Daten sind bereit für den Export",
   "exportComplete": "Datenexport abgeschlossen",
   "exportNoData": "Etwas ist schief gelaufen. Keine Daten zu exportieren.",
-  "history": "Geschichte",
-  "bedTime": "Bettzeit:",
-  "wakeTime": "Wake Zeit:",
-  "whatsOnYourMind": "Was haben Sie auf dem Herzen?",
-  "yourWellbeing": "Ihr Wohlbefinden",
+  "history": "Verlauf",
+  "bedTime": "Schlafenszeit:",
+  "wakeTime": "Aufstehzeit:",
+  "whatsOnYourMind": "Was hast du auf dem Herzen?",
+  "yourWellbeing": "Dein Wohlbefinden",
   "home": "Zuhause",
-  "settings": "die Einstellungen",
+  "settings": "Einstellungen",
   "system": "System",
   "systemSubtitle": "Sprache, Thema, Version",
   "language": "Sprache",
   "theme": "Thema",
   "dark": "Dunkel",
-  "light": "Licht",
-  "hideNoteText": "Ausblenden Notizinhalt",
-  "hideNoteTextSubtitle": "Hinweis Inhalt wird nicht standardmäßig auf dem Startbildschirm enthüllt werden",
-  "hideText": "Text verstecken",
+  "light": "Hell",
+  "hideNoteText": "Notizinhalt ausblenden",
+  "hideNoteTextSubtitle": "Notiz Inhalt wird nicht standardmäßig auf dem Startbildschirm zu sehen sein",
+  "hideText": "Text ausblenden",
   "showText": "Text anzeigen",
   "version": "App Version",
-  "pickImage": "Pick-Bild",
+  "pickImage": "Wähle ein Bild",
   "change": "Veränderung",
   "clear": "klar",
-  "cameraRollPermissionsiOS": "Leider können wir benötigen Fotogalerie Rechte, um diese Arbeit zu machen!",
-  "cameraRollPermissionsAndroid": "Leider können wir benötigen Dateien und Medien Rechte, um diese Arbeit zu machen!",
+  "cameraRollPermissionsiOS": "Entschuldige, wir brauchen Zugriff auf deine Foto Gallerie!",
+  "cameraRollPermissionsAndroid": "Entschuldige, wir brauchen Zugriff auf deine Dateien und Medien!",
   "General": "Ein Fehler ist aufgetreten",
   "InvalidData": "Ungültige Daten",
-  "EmptyData": "Sieht aus wie keine Datensätze gefunden wurden",
+  "EmptyData": "Es wurden keine Datensätze gefunden",
   "InvalidFormat": "Ungültiges Format",
-  "InvalidFile": "Ungültige Datei. Wenn dies ein Cloud-Dokument ist, bitte zuerst auf das Gerät herunterladen.",
-  "InvalidDirectory": "Verzeichnis nicht vorhanden",
-  "InvalidFileData": "Ungültige Daten, versuchen Sie eine andere Datei",
-  "NoRecordsInFile": "Sieht aus wie es keine Einträge in der Datei sind",
+  "InvalidFile": "Ungültige Datei. Wenn dies ein Cloud-Dokument ist, bitte zuerst auf dein Gerät herunterladen.",
+  "InvalidDirectory": "Es gibt kein Verzeichnis",
+  "InvalidFileData": "Ungültige Daten, versuche eine andere Datei",
+  "NoRecordsInFile": "Sieht aus, als ob keine Datensätze in der Datei sind",
   "InvalidParameter": "Ungültiger Parameter",
   "InvalidKey": "Ungültiger Schlüssel",
   "NewPasswordCannotBeBlank": "Neues Passwort darf nicht leer sein",
-  "InvalidPassword": "Falsche Kennwort. Bitte versuchen Sie es erneut",
-  "InvalidPIN": "Ungültige PIN, bitte versuchen Sie es erneut",
-  "InvalidCredentials": "Ungültige Anmeldeinformationen, bitte versuchen Sie es erneut",
-  "MissingPassword": "Fehlende Passwort oder PIN, bitte versuchen Sie es erneut",
-  "InvalidFilePassword": "Ungültige Kennwort für diese Datei, bitte versuchen Sie es erneut",
+  "InvalidPassword": "Falsches Passwort, bitte versuche es erneut",
+  "InvalidPIN": "Ungültige PIN, bitte versuche es erneut",
+  "InvalidCredentials": "Ungültige Anmeldeinformationen, bitte versuche es erneut",
+  "MissingPassword": "Fehlendes Passwort oder PIN, bitte versuche es erneut",
+  "InvalidFilePassword": "Ungültiges Passwort für diese Datei, bitte versuche es erneut",
   "UnableToSave": "Speichern nicht möglich",
-  "UnableToEncrypt": "Nicht imstande, zu verschlüsseln",
-  "UnableToDecrypt": "Nicht in der Lage zu entschlüsseln",
+  "UnableToEncrypt": "Kann nicht verschlüsselt werden",
+  "UnableToDecrypt": "Kann nicht entschlüsselt werden",
   "ImportError": "Import Fehler",
-  "ExportError": "Export-Fehler",
+  "ExportError": "Export Fehler",
   "AccessStorage": "Kein Zugriff auf Speicher",
-  "PasswordAlreadySet": "Kennwort wurde bereits gesetzt, versuchen die Protokollierung in statt",
-  "CannotSetPIN": "Kann nicht Setup neuer PIN",
-  "Unauthorized": "unbefugt",
-  "PasswordSet": "Kennwort erfolgreich angewendet",
-  "PinSet": "PIN eingestellt erfolgreich",
+  "PasswordAlreadySet": "Passwort wurde bereits festgelegt, versuche dich einzuloggen",
+  "CannotSetPIN": "Es kann keine neue PIN erstellt werden",
+  "Unauthorized": "Nicht autorisiert",
+  "PasswordSet": "Kennwort erfolgreich eingerichtet",
+  "PinSet": "PIN erfolgreich eingestellt",
   "CannotDeleteFile": "Die Datei kann nicht gelöscht werden",
   "ImageNotFound": "Ooops, Bilddatei nicht gefunden",
-  "MaxLoginAttempts": "Lets versuchen, ein Passwort statt Eingabe",
-  "NotEnoughSpace": "Nicht genügend Speicherplatz zum Erstellen einer Datei"
+  "MaxLoginAttempts": "Versuche stattdessen das/ein Passwort einzugeben (das = if i already have the passwort i have to insert / ein = if I have to create a passwort) ",
+  "NotEnoughSpace": "Nicht genügend Speicherplatz um Datei zu erstellen",
+  "Duration": "Duration",
+  "Minutes": "Minutes",
+  "Kilometers": "Kilometers",
+  "Distance": "Distance"
 }
