--- a/src/assets/translations/fr.json
+++ b/src/assets/translations/fr.json
@@ -7,6 +7,14 @@
   "image": "Image",
   "water": "Water",
   "waterIntake": "Water Intake",
+  "movement": "Movement",
+  "move": "Move",
+  "creativity": "Creativity",
+  "create": "Create",
+  "meditationMinutes": "Meditation (minutes)",
+  "meditation": "Meditation",
+  "meditate": "Meditate",
+  "period": "Period",
   "images": "Images",
   "notes": "Notes",
   "moods": "Humeurs",
@@ -157,5 +165,9 @@
   "CannotDeleteFile": "Impossible de supprimer le fichier",
   "ImageNotFound": "Erreur, fichier image non trouvé",
   "MaxLoginAttempts": "Permet d'essayer d'entrer un mot de passe à la place",
-  "NotEnoughSpace": "Espace disque insuffisant pour créer le fichier"
+  "NotEnoughSpace": "Espace disque insuffisant pour créer le fichier",
+  "Duration": "Duration",
+  "Minutes": "Minutes",
+  "Kilometers": "Kilometers",
+  "Distance": "Distance"
 }
