add: customizable lists add: encrypted settings

--- a/src/assets/translations/de.json
+++ b/src/assets/translations/de.json
@@ -166,8 +166,31 @@
   "ImageNotFound": "Ooops, Bilddatei nicht gefunden",
   "MaxLoginAttempts": "Versuche stattdessen das/ein Passwort einzugeben (das = if i already have the passwort i have to insert / ein = if I have to create a passwort) ",
   "NotEnoughSpace": "Nicht genügend Speicherplatz um Datei zu erstellen",
+  "Minutes": "min",
+  "Kilometers": "km",
+  "Miles": "mi",
   "Duration": "Duration",
-  "Minutes": "Minutes",
-  "Kilometers": "Kilometers",
-  "Distance": "Distance"
+  "Distance": "Distance",
+  "customize": "Customize",
+  "customItemsInstructions": "Enter your custom items or tap an item and use the arrows to re-order the list",
+  "customItemText": "Custom item text",
+  "itemAlreadyInTheList": "This item is already in the list",
+  "resetToDefaults": "Reset to default",
+  "tapToSelect": "Tap to select below",
+  "pickValue": "pick value",
+  "Walking": "Walking",
+  "Dancing": "Dancing",
+  "Running": "Running",
+  "Swimming": "Swimming",
+  "Surfing": "Surfing",
+  "Yoga": "Yoga",
+  "Biking": "Biking",
+  "Playing Sports": "Playing Sports",
+  "Writing": "Writing",
+  "Drawing": "Drawing",
+  "Painting": "Painting",
+  "Crafting": "Crafting",
+  "Playing": "Playing",
+  "Singing": "Singing",
+  "Workout": "Workout"
 }
