--- a/src/assets/translations/ru.json
+++ b/src/assets/translations/ru.json
@@ -5,16 +5,16 @@
   "mood": "Настроение",
   "sleep": "Сон",
   "image": "Фото",
-  "water": "Water",
-  "waterIntake": "Water Intake",
-  "movement": "Movement",
-  "move": "Move",
-  "creativity": "Creativity",
-  "create": "Create",
-  "meditationMinutes": "Meditation (minutes)",
-  "meditation": "Meditation",
-  "meditate": "Meditate",
-  "period": "Period",
+  "water": "Вода",
+  "waterIntake": "Вода",
+  "movement": "Движение",
+  "move": "Движение",
+  "creativity": "Творчество",
+  "create": "Творчество",
+  "meditationMinutes": "Медитация (минуты)",
+  "meditation": "Медитация",
+  "meditate": "Медитация",
+  "period": "Месячные",
   "images": "Фото",
   "notes": "Записи",
   "moods": "Настроения",
@@ -166,8 +166,31 @@
   "ImageNotFound": "Файл изображения не найден",
   "MaxLoginAttempts": "Попробуйте ввести пароль",
   "NotEnoughSpace": "Недостаточно места на диске для хранения файла",
-  "Duration": "Duration",
-  "Minutes": "Minutes",
-  "Kilometers": "Kilometers",
-  "Distance": "Distance"
+  "Minutes": "min",
+  "Kilometers": "km",
+  "Miles": "mi",
+  "Duration": "Длительность",
+  "Distance": "Дистанция",
+  "customize": "Настройки списков",
+  "customItemsInstructions": "Введите свой текст или нажмите на пункт и используйте стрелки, чтобы изменить порядок в списке",
+  "customItemText": "Свой текст",
+  "itemAlreadyInTheList": "Етот пункт уже в списке",
+  "resetToDefaults": "Вернуть список по умолчанию",
+  "tapToSelect": "Нажмите чтобы выбрать",
+  "pickValue": "выберете",
+  "Walking": "Ходьба",
+  "Dancing": "Танцы",
+  "Running": "Бег",
+  "Swimming": "Плавание",
+  "Surfing": "Серф",
+  "Yoga": "Йога",
+  "Biking": "Велосипед",
+  "Playing Sports": "Спорт Игры",
+  "Writing": "Писание",
+  "Drawing": "Рисование",
+  "Painting": "Живопись",
+  "Crafting": "Crafting",
+  "Playing": "Игра на музыкальных инструментах",
+  "Singing": "Пение",
+  "Workout": "Тренировка"
 }
